学習有効無効の更新引数変更 #3082
